--- a/nerd-olympics/app/layout.scss
+++ b/nerd-olympics/app/layout.scss
@@ -1,37 +1,82 @@
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans");
 
+@mixin scrollbars($size, $foreground-color, $background-color: mix($foreground-color, white,  50%)) {
+  // For Google Chrome
+  &::-webkit-scrollbar {
+    width:  $size;
+    height: $size;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $foreground-color;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $background-color;
+  }
+
+  // For Internet Explorer
+  & {
+    scrollbar-face-color: $foreground-color;
+    scrollbar-track-color: $background-color;
+  }
+}
+
 html {
     width: 100%;
     height: 100vh;
     color: #f2f2f2;
     background:  #232323;
+    @include scrollbars(10px, #4d4d4e, rgb(18, 18, 18));
+    
 }
 
-/** NAVIGATION BAR */
-nav {
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    ul {
-      text-align: center;
-      list-style-type: none;
-      list-style-type: none;
-      margin: 0;
-      padding: 15px;
-      li {
-        display: inline;
-        font-family: "Fira Sans", sans-serif;
-        font-size: 17px;
-        a {
-          color: #f2f2f2;
-          text-decoration: none;
-          padding: 14px;
-          &:hover {
-            background-color: #111;
-          }
-        }
-      }
-    }
+.container{
+  display: inline-block;
+  width: 100%;
+  
+}
+
+.navigation-bar{
+  background: #181818;
+  height: 60px;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  padding: 7px;
+  min-width: 500px;
+  overflow: hidden;
+  z-index: 3;
+  nav{
+    text-align: center;
+    margin: auto;
   }
+  
+  li{
+    display: inline;
+  }
+  a{
+    color: #4d4d4e;
+    text-decoration: none;
+    font-size: 22px;
+    position: relative;
+    margin: 30px;
+    opacity: 0.8;
+    transition: 0.3s;
+  }
+  a:hover{
+    color: #ffd700;
+    opacity: 1;
+  }
+  
+  i{ 
+    transition: all 0.5s ease-out;
+  }
+}
+
+.content{
+  position: absolute;
+  top: 60px;
+  
+}
