--- a/nerd-olympics/utilities/base.scss
+++ b/nerd-olympics/utilities/base.scss
@@ -26,3 +26,5 @@ $scrollbar-size: 10px;
       scrollbar-track-color: $background-color;
     }
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
