added styles to the sign up and competitions page

--- a/nerd-olympics/utilities/base.scss
+++ b/nerd-olympics/utilities/base.scss
@@ -2,6 +2,7 @@ $background-color: #232323;
 $title-color: #999999;
 $letter-color: #f2f2f2;
 $border-color: #404040;
+$input-color: #dddddd;
 
 $scrollbar-size: 10px;
 
