--- a/nerd-olympics/app/players/players.module.scss
+++ b/nerd-olympics/app/players/players.module.scss
@@ -7,6 +7,6 @@
     border-radius: 5px;
     height: 90%;
     overflow: auto;
-    @include scrollbars($scrollbar-size, $title-color, $background-color);
+    @include scrollbars($scrollbar-size, $title-font-color, $background-color);
 }
 
