--- a/nerd-olympics/app/competitions/newComp.module.scss
+++ b/nerd-olympics/app/competitions/newComp.module.scss
@@ -1,17 +1,14 @@
 @import "@/utilities/base.scss";
 
 .container {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 0.9;
-	background-color: lighten($background-color, 20%);
-	color: $font-color;
-	display: flex;
+	width: 400px;
+	background-color: $background-color;
+	padding: 10px;
+	color: $title-font-color;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	border-radius: 5px;
 	form {
 		display: flex;
 		justify-content: center;
