--- a/nerd-olympics/app/competitions/newComp.module.scss
+++ b/nerd-olympics/app/competitions/newComp.module.scss
@@ -3,7 +3,7 @@
 .container {
 	width: 400px;
 	background-color: $background-color;
-	padding: 10px;
+	padding: 20px;
 	color: $title-font-color;
 	justify-content: center;
 	align-items: center;
@@ -15,9 +15,10 @@
 		flex-direction: column;
 
 		input {
+			margin-top: 5px;
+			margin-bottom: 5px;
 			background-color: $input-color;
 			padding: 10px 20px;
-			margin: 10px;
 			border: 1px solid #ccc;
 			border-radius: 3px;
 			outline: transparent;
@@ -37,4 +38,31 @@
 	background-color: darken($input-color, 40%);
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	transform: translateY(-2px);
+}
+
+.measurementType {
+	display: flex;
+	width: 100%;
+}
+
+.arrow {
+	cursor: pointer;
+	transition: 0.3s all ease;
+}
+
+.arrow:hover {
+	color: $title-accent-color;
+	transform: scale(1.3);
+}
+
+.inUse {
+	color: red;
+	font-size: 10px;
+}
+
+.selectMeasurement {
+	border-radius: 3px;
+	font-size: 16px;
+	margin-top: 3px;
+	outline: none;
 }
